--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,7 +11,7 @@ jobs:
       DATABASE_PORT: 5432
       DATABASE_PASSWORD: admin
       DATABASE_USERNAME: postgres
-      DATABASE_NAME: fastapi_test
+      DATABASE_NAME: fastapi
       SECRETE_KEY: 4806fc9919e9b3691c81b048bb1090475fd02644484434c05d319b76515f522c
       ALGORITHM: HS256
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
