--- a/requirements.txt
+++ b/requirements.txt
@@ -17,12 +17,15 @@ httpcore==0.17.3
 httptools==0.6.0
 httpx==0.24.1
 idna==3.4
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
 orjson==3.9.2
+packaging==23.1
 passlib==1.7.4
+pluggy==1.3.0
 psycopg2==2.9.7
 pyasn1==0.5.0
 pycparser==2.21
@@ -30,6 +33,7 @@ pydantic==2.1.1
 pydantic-extra-types==2.0.0
 pydantic-settings==2.0.2
 pydantic_core==2.4.0
+pytest==7.4.1
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
